--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "private": false,
   "version": "0.2.0",
   "description": "A lightweight ethereum classic block explorer",
-  "repository": "https://github.com/ethereumproject/explorer",
+  "repository": "https://github.com/matrixainetwork",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently \"node tools/sync.js \" \"node app.js\" ",
+    "start": "concurrently \"node tools/sync.js \" \"node tools/stats.js \"  \"node app.js\" ",
     "pretest": "copyfiles app.js app/  ",
     "test": "./node_modules/.bin/mocha --reporter spec  "
   },
   "dependencies": {
     "bignumber.js": "^5.0.0",
+    "binascii": "0.0.2",
     "body-parser": "^1.12.2",
     "concurrently": "^3.5.1",
     "ejs": "~2.5.7",
